--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </li>
         <ul>
     </div>
-    <script src='https://unpkg.com/vue@3/dist/vue.global.js'>/script>
-<script src="https://canjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" integrity="sha512-JSCHhKDilTRRXe9ak/FJ28dcp0JxzQaCd3Xg8MyF6XFjODhy/
-YMCM8HW®TFDckNHWUewW+kfvhin43hKtJAw—" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
+    <script src="https://canjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" integrity="sha512-JSCHhKDilTRRXe9ak/FJ28dcp0JxzQaCd3Xg8MyF6XFjODhy/
+    YMCM8HW®TFDckNHWUewW+kfvhin43hKtJAw—" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 </body>
 </html>
